
Feb 29 2016 - chris ---------------------------------------------------
o issue #71: fixed growing journal file (thanks, Hitoshi Yonemichi)

Feb 26 2016 - chris ---------------------------------------------------
o Removed UPS_PARTIAL and all related functionality
o Removed UPS_FLUSH_TXN_IMMEDIATELY - it was deprecated and not used
o UPS_DIRECT_ACCESS is now deprecated and only used internally

Feb 25 2016 - chris ---------------------------------------------------
o Added ups_at_exit cleanup function to release statically allocated
	resources

Feb 23 2016 - chris ---------------------------------------------------
o Replaced (old) UQI functions with uqi_select and uqi_select_range, and a
	SQL-ish query function

Feb 06 2016 - chris ---------------------------------------------------
                      release of upscaledb-2.1.13

Jan 28, 2016 - chris ---------------------------------------------------
o Deprecated the flag UPS_FLUSH_WHEN_COMMITTED

Jan 26, 2016 - chris ---------------------------------------------------
o Removed a bad assert and fixed a bug in ups_cursor_move (thanks, Rafal
	Czaja)

Jan 21, 2016 - chris ---------------------------------------------------
o issue #47: fixed bad assert in ups_cursor_move

Jan 21, 2016 - chris ---------------------------------------------------
o issue #62: ups_info prints wrong value for "max record size"

Jan 21, 2016 - chris ---------------------------------------------------
o issue #66: return with error if a database is modified by a committed
	transaction which was not yet flushed to disk (thanks, Balazs Bamer) 

Jan 21, 2016 - chris ---------------------------------------------------
o issue #67: fixed broken installation path and other "ham"/"hamsterdb"
	references (thanks, Wouter Hager)

Jan 18, 2016 - chris ---------------------------------------------------
o Changed the .NET/C# delegate interface for custom compare functions; the
    delegate has to perform the marshalling now (see unittests for a