@@ -275,7 +275,8 @@ main(int argc, char **argv) {
   Exporter *exporter = new BinaryExporter(outfilename);
 
   /* open the environment */
-  ups_status_t st = ups_env_open(&env, infilename, UPS_READ_ONLY, 0);
+  ups_status_t st = ups_env_open(&env, infilename,
+                  UPS_READ_ONLY | UPS_IGNORE_MISSING_CALLBACK, 0);
   if (st == UPS_FILE_NOT_FOUND) {
     fprintf(stderr, "File `%s' not found or unable to open it\n", infilename);
     return (-1);
